# rpcc

./: README  meson.build
data/: meson.build  rpcc.desktop.in  rpcc.ui  test.ui
debian/: changelog  control  copyright
plugins/: hello_world.c  meson.build  rpcc_api.h
po/: POTFILES.in  ja.po  pt-br.po  pt.po
src/: meson.build  rpcc.c  rpcc.h
src/core/: meson.build  rpcc.c
src/plugins/test/: meson.build  test.c
